# wayland-mcp

./: .gitignore  .npmrc  .pylintrc  README.md  package-lock.json  package.json  pyproject.toml  setup.cfg  setup.sh  test.ts  test_wayland_mcp_client.py  tsconfig.json  wayland_mcp.js  wayland_mcp_node_plan.md
mcp-venv/: pyvenv.cfg
src/wayland_mcp/: server_mcp.py
wayland_mcp/: .env  ARCHITECTURE_CLEANUP.md  README.md  __init__.py  add_rulers.py  app.py  chain_processor.py  keyboard_utils.py  keymap.py  mouse_utils.py  pyproject.toml  requirements.txt  screen_utils.py  server_mcp.py  setup.cfg  setup.sh  wayland_mcp.js
wayland_mcp/server/: app.py
wayland_mcp/wayland_mcp/: __init__.py  add_rulers.py  mouse_utils.py  server_mcp.py
wayland_mcp/wayland_mcp/server/: app.py  wayland_screenshot.py
