[project]
name = "wayland-mcp"
version = "0.4.0"
description = "Wayland MCP server (Python, uvx-compatible)"
readme = "README.md"
authors = [{ name = "someaka" }]
urls = { repository = "https://github.com/someaka/wayland-mcp" }
dependencies = [
    "requests",
    "fastmcp",
    "Pillow"
]
requires-python = ">=3.8"

[project.scripts]
wayland-mcp = "wayland_mcp.server_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["wayland_mcp"]
package-dir = {"" = "wayland_mcp"}
include-package-data = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"