[project]
name = "wayland-mcp"
version = "0.2.3"
description = "Wayland MCP server (Python, uvx-compatible)"
readme = "README.md"
authors = [{ name = "someaka" }]
dependencies = [
    "requests",
    "fastmcp"
]
requires-python = ">=3.8"

[project.scripts]
wayland-mcp = "wayland_mcp.server_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["wayland_mcp"]



[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"